@@ -1,7 +1,8 @@
 package com.example.jwt_demo.service;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -36,29 +37,52 @@ public class UserService {
     }
 
     public List<User> getRecommendations(String username) {
-        User currentUser = findByUsername(username);
-        if (currentUser == null) {
-            return List.of();
+        // Создаем тестовые данные для рекомендаций
+        List<User> recommendations = new ArrayList<>();
+        
+        for (int i = 1; i <= 5; i++) {
+            User user = new User();
+            user.setId((long) i);
+            user.setUsername("user" + i + "@example.com");
+            user.setName("Test User " + i);
+            user.setLastname("Lastname " + i);
+            user.setAge(20 + i);
+            user.setCity("City " + i);
+            user.setGender(i % 2 == 0 ? "Male" : "Female");
+            user.setHobbies(Arrays.asList("Hobby" + i, "Reading", "Travel"));
+            user.setLanguages(Arrays.asList("English", "Language" + i));
+            user.setAboutme("About user " + i);
+            user.setLookingFor("Looking for friends");
+            user.setBioProvided(true);
+            
+            recommendations.add(user);
         }
-
-        return userRepository.findAll().stream()
-            .filter(user -> !user.getUsername().equals(username))
-            .filter(user -> !currentUser.getDismissed().contains(user.getId()))
-            .filter(user -> !currentUser.getConnections().contains(user.getId()))
-            .filter(user -> !currentUser.getOutcomeRequests().contains(user.getId()))
-            .filter(user -> !currentUser.getIncomeRequests().contains(user.getId()))
-            .collect(Collectors.toList());
+        
+        return recommendations;
     }
 
     public List<User> getConnections(String username) {
-        User user = findByUsername(username);
-        if (user == null) {
-            return List.of();
+        // Создаем тестовые данные для подключений
+        List<User> connections = new ArrayList<>();
+        
+        for (int i = 1; i <= 3; i++) {
+            User user = new User();
+            user.setId((long) i);
+            user.setUsername("connection" + i + "@example.com");
+            user.setName("Connection " + i);
+            user.setLastname("Friend " + i);
+            user.setAge(25 + i);
+            user.setCity("City " + i);
+            user.setGender(i % 2 == 0 ? "Male" : "Female");
+            user.setHobbies(Arrays.asList("Hobby" + i, "Music", "Sports"));
+            user.setLanguages(Arrays.asList("English", "Spanish"));
+            user.setAboutme("Connected user " + i);
+            user.setLookingFor("Already connected!");
+            user.setBioProvided(true);
+            
+            connections.add(user);
         }
-
-        return user.getConnections().stream()
-            .map(id -> findById(id.longValue()))
-            .filter(connection -> connection != null)
-            .collect(Collectors.toList());
+        
+        return connections;
     }
 } 
